--- a/src/main/about/About.module.css
+++ b/src/main/about/About.module.css
@@ -1,10 +1,8 @@
 .aboutBlock {
-    height: 100vh;
     background-color: #fdf7f9;
-
 }
 
-.container {
+.aboutContainer {
     border: 1px solid;
     width: 80%;
     height: 100%;
@@ -12,18 +10,28 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
 }
 .introductionAbout {
     width: 300px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     background-color: #eeecec;
+    margin: 10px;
 }
 
 .photoAbout {
     width: 300px;
     height: 300px;
     background-color: #eeecec;
+    margin: 10px;
 
+}
+
+@media screen and (max-width: 1024px) {
+    .skills {
+        justify-content: center;
+    }
 }
