--- a/src/main/skills/skill/Skill.module.css
+++ b/src/main/skills/skill/Skill.module.css
@@ -1,3 +1,14 @@
 .skill {
+    width: 250px;
+    background-color: #fdf7f9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 10px;
+
+}
+
+.icon {
 
 }
