--- a/src/main/portfolio/project/Project.module.css
+++ b/src/main/portfolio/project/Project.module.css
@@ -11,7 +11,16 @@
 .imgProject {
    width: 100%;
 }
+.img {
+height: 300px;
+    background-color: darkgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.viewBtn {
 
+}
 .projectText {
 
 }
