Change styles and structure for Footer.tsx component, used Font Awesome library.

--- a/src/footer/Footer.module.css
+++ b/src/footer/Footer.module.css
@@ -1,73 +1,45 @@
 .footerBlock {
-    background-color: #F4F8F9;
-    padding-bottom: 30px;
-
-
+    background-color: #414254;
+    height: 60px;
+    padding: 5px;
 }
 
 .footerContainer {
-    border: 1px solid;
     width: 80%;
     height: 100%;
     margin: 0 auto;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.footerItems {
-    width: 80%;
-    display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    font-size: 0.85em;
     flex-wrap: wrap;
 }
 
-.item {
-    width: 210px;
-    height: 80px;
-    background-color: cornsilk;
-    margin: 10px;
-    font-size: 12px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
+.footerSocial a {
+    font-size: 1.2em;
+    display: inline-block;
+    color: #fff;
+    margin: 0 20px;
+    transition: color .3s ease-out;
 }
 
-.item h5 {
-    font-size: 14px;
-    margin: 10px 0;
-    font-weight: revert;
+a {
+    text-decoration: none;
+    background-color: transparent;
+    cursor: pointer;
 }
 
-.linkMedia a{
-    margin-right: 8px;
+a:hover {
+    color: #ce4b7e;
 }
-
-.formFooter {
-
-}
-
-.inputFooter {
-    border-style: none none solid none;
-    border-width: 1px;
-    background-color: cornsilk;
-}
-
-.btnFooter {
-
-}
-
 
 .copyright {
-    font-size: 12px;
-    margin: 15px;
-
+    color: #dbd8d8;
+    margin-left: 30px;
 }
 
-@media screen and (max-width: 1024px) {
-    .footerItems {
+@media screen and (max-width: 700px) {
+    .footerContainer {
         justify-content: center;
     }
 }
