--- a/src/opener/Opener.module.css
+++ b/src/opener/Opener.module.css
@@ -28,13 +28,18 @@
 }
 
 .introduction {
-    width: 300px;
-    height: 200px;
+    width: 400px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     line-height: 1.2;
-
+}
+.introduction > h1 {
+    font-weight: 700;
+    font-size: 4.0em;
+    line-height: 1.2;
+    margin: 0 0 0.3em;
 }
 
 .text {
@@ -47,8 +52,9 @@
     background-image: url('../assets/img/photo.svg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    width: 650px;
+    width: 600px;
     height: 600px;
+
 }
 
 .btn {
@@ -67,10 +73,11 @@
     color: rgb(254, 254, 254);
 }
 
-.btn:focus {
-    border-color: #fff;
+.btn:hover {
+    border-color: #cc4277;
     background-color: transparent;
-    color: #fff;
+    color: #cc4277;
+    cursor: pointer;
 }
 
 /*
